docs/versioned_docs/version-0.7.0/api/mellea/stdlib/components/instruction.mdx
---
title: "mellea.stdlib.components.instruction"
sidebar_label: "mellea.stdlib.components.instruction"
description: "`Instruction` component for instruct/validate/repair loops."
---

`Instruction` component for instruct/validate/repair loops.





`Instruction` is the primary component type used with `MelleaSession.instruct`. It
packages a task `description`, a list of [`Requirement`](../../core/requirement#class-requirement) constraints, optional
in-context-learning examples, a grounding context dict, user variables for Jinja2
template interpolation, and output/input prefix overrides into a single renderable
unit. The session's sampling strategy evaluates each requirement against the model's
output and may repair or resample until all requirements pass.


## Classes

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />


### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#4ADE8033]/20 text-[#15803D]">CLASS</span> `Instruction` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/instruction.py#L30" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#class-instruction}


The Instruction in an instruct/validate/repair loop.

**Args:**
- `description`: The task description shown to the model.
- `requirements`: Constraints the output must satisfy.
- `icl_examples`: In-context-learning examples.
- `grounding_context`: Named context
passages injected into the prompt.
- `user_variables`: Jinja2 variable substitutions applied
to all string parameters.
- `prefix`: A prefix prepended before the model's generation.
- `output_prefix`: A prefix prepended to the model's output token
stream (currently unsupported; must be `None`).
- `images`: Images to include in the prompt.

**Attributes:**
- `requirements`: The resolved list of requirement instances
attached to this instruction.



<div className="h-8" />
**Methods:**

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `parts` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/instruction.py#L149" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#parts}

```python
parts(self) -> list[Component | CBlock | ModelOutputThunk]
```

Returns all of the constituent parts of an Instruction.

**Returns:**
- list\[Component | CBlock | ModelOutputThunk]: All non-None constituent blocks and
- components making up this instruction, including description,
- prefix, grounding context, requirements, and in-context-learning
- examples.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `format_for_llm` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/instruction.py#L173" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#format_for_llm}

```python
format_for_llm(self) -> TemplateRepresentation
```

Format this instruction for the language model.

**Returns:**
- A template representation containing the
- description, requirements, in-context examples, grounding context,
- and optional prefix/repair fields.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `apply_user_dict_from_jinja` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/instruction.py#L206" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#apply_user_dict_from_jinja}

```python
apply_user_dict_from_jinja(user_dict: dict[str, str], s: str) -> str
```

Render a Jinja2 template string using the provided variable dictionary.

**Args:**
- `user_dict`: Mapping of Jinja2 variable names to their
string replacement values.
- `s`: A string treated as a Jinja2 template to be rendered.

**Returns:**
- The rendered string with all Jinja2 placeholders substituted.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `requirements` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/instruction.py#L221" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#requirements}

```python
requirements(self) -> list[Requirement]
```

Returns a list of Requirement instances.


<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />

#### <span className="ml-2 inline-flex items-center rounded-full px-2 py-1 text-[0.7rem] font-bold tracking-wide bg-[#3064E3]/20 text-[#1D4ED8]">FUNC</span> `copy_and_repair` <sup><a href="https://github.com/generative-computing/mellea/blob/v0.7.0/mellea/stdlib/components/instruction.py#L225" target="_blank"><Icon icon="github" style="width: 0.85em; height: 0.85em;" /></a></sup> {#copy_and_repair}

```python
copy_and_repair(self, repair_string: str) -> Instruction
```

Create a deep copy of this instruction with the repair string set.

**Args:**
- `repair_string`: The repair feedback string to attach, typically
describing which requirements failed and why.

**Returns:**
- A new `Instruction` identical to this one but with
- `_repair_string` set to `repair_string`.

<div className="w-full h-px bg-gray-200 dark:bg-gray-700 my-4" />
